Hotfix: paragraph label overflow resolves #517

--- a/src/sass/_stage.scss
+++ b/src/sass/_stage.scss
@@ -215,6 +215,7 @@
     &.paragraph-field {
       .fld-label {
         min-height: 150px;
+        overflow-y: auto;
       }
     }
 
